# rafael

./: CMakeLists.txt  README.md  args.c  context.c  execution.c  execution.h  functions.c  functions.h  gc.c  main.c  parser.c  repl.c  repl.h  script_loader.c  script_loader.h  vars.c
src/: args.c  context.c  execution.c  functions.c  gc.c  main.c  options.c  parser.c  repl.c  script_loader.c  util.c  vars.c
src/include/: args.h  context.h  execution.h  gc.h  options.h  parser.h  script_loader.h  statement.h  terminate.h  util.h  vars.h
stdlib/: assert.rf  equal.rf  filter.rf  map.rf  modify.rf  println.rf  range.rf
tests/: additive_inverse_test.rf  mul_test.rf  null_test.rf  print_test.rf  ret_test.rf  str_test.rf  sum_test.rf  type_test.rf
tests/stdlib/: assert_test.rf  equal_test.rf
